<resources>
    <string name="app_name" translatable="false">Quiz Mobile</string>
    <string name="nombreApp" translatable="false">Quiz Mobile</string>
    <string name="textMensaje">¡Bienvenido a la mejor app de acertijos!</string>
    <string name="btnInicioSesion">Inciar Sesión</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="empecemos">Empecemos</string>
    <string name="hintEmail">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="textNombre">Nombre</string>
    <string name="nameText"></string>
    <string name="nameText2" />
    <string name="skip">Skip</string>
    <string name="tutorial2">¡Regístrate!</string>
    <string name="tutorial3">¿Ya tienes cuenta? Inicia sesión entonces</string>
    <string name="tutorial4">¡Responde a las preguntas!</string>
    <string name="tutorial5">¡Comprueba tu puntuación!</string>
    <string name="tutorial6">¡Compite contra los mejores!</string>
    <string name="tutorial7">¡Ya estás listo para los acertijos!</string>
    <string name="imageNext" />
    <string name="imagePrevious" />
    <string name="inputName">Nombre</string>
    <string name="pregunta1">¿Cuánto pesaba el Motorola Dynatac 8000x?</string>
    <string name="persona" />
    <string name="iconoApp" />
    <string name="iconoRegister">Register</string>
    <string name="motorla">Motorla Dynatron 8000x</string>
    <string name="pre1op1">500g</string>
    <string name="pre1op2">600 g</string>
    <string name="pre1op3">700 g</string>
    <string name="pre1op4">800 g</string>
    <string name="siguiente">Siguiente</string>
    <string name="textpreg2">¿Qué significan las siglas NFC?</string>
    <string name="imgenNFC">NFC</string>
    <string name="btnVolver">Volver</string>
    <string name="pregunta3">¿Cómo se llama el sistema de carga rápida de Mediateck?</string>
    <string name="mediatek" />
    <string name="pregunta4">¿Cómo se llama la compañia china que fabrica los smartphones de BlackBerry o Alcatel?</string>
    <string name="opcionesSpinner">Opcion 1</string>
    <string name="balackberry">BalackBerry</string>
    <string name="pregunta5">¿De qué otra marca iba acompañanada los teléfonos de Sony hasta 2011?</string>
    <string name="Logo">Sony Ericsson</string>
    <string name="puntuacion">Puntuación: </string>
    <string name="pun_numero" />
    <string name="btn_Reintentar">¿Reintentar?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_primer_usuario">primerUsuario</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ranking">Ranking</string>
    <string name="columna_1">Top</string>
    <string name="columna_2">Nombre</string>
    <string name="columna_3">Punt.</string>
</resources>