<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/nombreApp"
        android:textColor="#0B0A0A"
        android:textSize="15sp"
        app:fontFamily="@font/bowlby_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <Button
        android:id="@+id/btnIniciar_sesion"
        android:layout_width="275dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/disignbutton"
        android:onClick="Inciar_Sesion"
        android:text="@string/btnInicioSesion"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:fontFamily="@font/bowlby_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editContra" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="148dp"
        android:layout_height="34dp"
        android:layout_marginTop="28dp"
        android:background="@color/cardview_shadow_end_color"
        android:onClick="Registar"
        android:text="@string/btnRegistrar"
        android:textColor="@android:color/background_light"
        android:textSize="15sp"
        app:fontFamily="@font/bowlby_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciar_sesion" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="275dp"
        android:layout_height="52dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/box"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hintEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#121111"
        android:textSize="25sp"
        app:fontFamily="@font/cookie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editContra"
        android:layout_width="275dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/box"
        android:ems="10"
        android:fontFamily="@font/cookie"
        android:gravity="center"
        android:hint="@string/contraseña"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#121111"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="101dp"
        android:layout_height="115dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/iconoApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/telefono_inteligente" />

</androidx.constraintlayout.widget.ConstraintLayout>