<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".quiz3">

    <Button
        android:id="@+id/button9"
        android:layout_width="120dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/disignbutton"
        android:fontFamily="@font/work_sans"
        android:onClick="volver"
        android:text="@string/btnVolver"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="120dp"
        android:layout_height="47dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/disignbutton"
        android:fontFamily="@font/work_sans"
        android:onClick="siguiente3"
        android:text="@string/siguiente"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/box2"
        android:fontFamily="@font/work_sans"
        android:gravity="center"
        android:hint="@android:string/unknownName"
        android:text="@string/persona"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nombreApp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:fontFamily="@font/work_sans_bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="1.0" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/box"
        android:fontFamily="@font/work_sans"
        android:gravity="center"
        android:text="@string/pregunta3"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="320dp"
        android:layout_height="239dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/mediatek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:srcCompat="@drawable/mediatek" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>