<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".TutorialFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/work_sans"
        android:gravity="center"
        android:text="@string/textMensaje"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="299dp"
        android:layout_height="176dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="533dp"
        android:contentDescription="@android:string/unknownName"
        android:src="@drawable/hello_web_series__wordmark__logo" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="64dp"
        android:layout_height="58dp"
        android:contentDescription="@string/imageNext"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="322dp"
        android:layout_marginBottom="49dp"
        android:src="@drawable/flecha_correcta" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="158dp"
        android:layout_height="123dp"
        android:contentDescription="@string/Logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="128dp"
        android:layout_marginTop="261dp"
        android:src="@drawable/signo_de_interrogacion" />

</RelativeLayout>